# beta-decay-chains

./: El_Z.csv  ListNuclei.csv  README.md  Stable_dict.npy  setup.cfg
chain_generator/: interface.py  program.py
input_files/: HalfLives.csv  ListNuclei.csv
sample_csv/: Decay_Chains_103Rb.csv  Decay_Chains_104Rb.csv  Decay_Chains_88As.csv  Decay_Chains_91Se_Filled.csv  Decay_Chains_98Rb.csv
src/beta_decay_chain_generator_kwatts324.egg-info/: PKG-INFO  SOURCES.txt
src/chain_generator/: interface.py  program.py
