[metadata]
name = beta_decay_chain_generator_kwatts324
version = 0.0.1
author = Katelyn Watts
author_email = watts.katelyn4@gmail.com
description = Takes user-submitted nuclide and generates all possible beta minus decay chains.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kwatts-4/beta-decay-chains/
project_urls =
    Bug Tracker = https://github.com/kwatts-4/beta-decay-chains/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Creative Commons License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
